--- a/package.json
+++ b/package.json
@@ -43,8 +43,7 @@
     "browserify": "^16.1.1",
     "standard": "^11.0.1",
     "tape": "^4.6.3",
-    "tape-run": "^3.0.1",
-    "uglify-js": "^3.0.13"
+    "tape-run": "^3.0.1"
   },
   "dependencies": {
     "glob-to-regexp": "^0.4.0",
