--- a/package.json
+++ b/package.json
@@ -44,9 +44,10 @@
   },
   "dependencies": {
     "babel-core": "^6.26.0",
-    "babelify": "^8.0.0",
     "babel-preset-env": "^1.6.1",
+    "babelify": "^8.0.0",
     "glob-to-regexp": "^0.4.0",
+    "indexeddb-chunk-store": "^2.2.1",
     "loadjs": "^3.5.3",
     "webtorrent": "^0.98.18"
   },
