--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,9 @@ install:
   - export DISPLAY=':99.0'
   - Xvfb :99 -screen 0 1024x768x24 > /dev/null 2>&1 &
   - npm install
-before_script: greenkeeper-lockfile-update
+before_script:
+  - greenkeeper-lockfile-update
+  - npm run seed &
 after_script: greenkeeper-lockfile-upload
 language: node_js
 node_js: node
