remove package-lock.json

--- a/.gitignore
+++ b/.gitignore
@@ -32,6 +32,9 @@ bower_components
 # Compiled binary addons (http://nodejs.org/api/addons.html)
 build/Release
 
+# isn't necessary for this dev environment and clogs git diffs
+package-lock.json
+
 # Dependency directories
 node_modules/
 jspm_packages/
