--- a/package.json
+++ b/package.json
@@ -27,8 +27,9 @@
   "devDependencies": {
     "babel-minify": "^0.4.0",
     "browserify": "^16.1.1",
+    "tape-promise": "^3.0.0",
+    "tape": "^4.9.1",
     "standard": "^11.0.1",
-    "tape": "^4.6.3",
     "tape-run": "^4.0.0",
     "webtorrent-hybrid": "^1.0.6"
   },
