--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   },
   "dependencies": {
     "glob-to-regexp": "^0.4.0",
+    "idbkv-chunk-store": "^1.0.2",
     "loadjs": "^3.5.3",
     "webtorrent": "https://github.com/KayleePop/webtorrent/tarball/idbkv-chunk-store"
   },
