--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "description": "An extension of loadjs that supports torrents",
   "scripts": {
-    "test": "standard && browserify test/*.js | tape-run --static test/fixtures",
+    "test": "standard && browserify test/test.js | tape-run --static test/fixtures",
     "build": "browserify loadjs-torrent.js -s torrentJs | minify > loadjs-torrent.min.js"
   },
   "main": "loadjs-torrent.js",
@@ -26,9 +26,9 @@
   "devDependencies": {
     "babel-minify": "^0.5.0",
     "browserify": "^16.1.1",
+    "muggle-assert": "^1.0.0",
+    "muggle-test": "^1.0.0",
     "standard": "^12.0.0",
-    "tape": "^4.9.1",
-    "tape-promise": "^3.0.0",
     "tape-run": "^4.0.0"
   },
   "dependencies": {
